force-app/main/default/objects/Bio_AMVs__c/Bio_AMVs__c.object-meta.xml
<CustomObject>
    <label>Bio AMV</label>
    <nameField>
        <displayFormat>BIO-{0}</displayFormat>
        <label>Bio AMV Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bio AMVs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>