force-app/main/default/objects/Bio_AMVs__c/fields/AGO_B7_m_Prompt__c.field-meta.xml
<CustomField>
    <fullName>AGO_B7_m_Prompt__c</fullName>
    <label>AGO B7(€/m³)  Prompt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>