force-app/main/default/objects/Bio_AMVs__c/fields/Future_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Future_Valid_From__c</fullName>
    <description>First day for M+2</description>
    <label>Future Valid From</label>
    <type>Date</type>
</CustomField>