force-app/main/default/objects/Bio_AMVs__c/fields/Future_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>Future_Valid_To__c</fullName>
    <description>Last day for M+14</description>
    <label>Future Valid To</label>
    <type>Date</type>
</CustomField>