force-app/main/default/objects/Bio_AMVs__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plant</description>
    <label>Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Bio AMVs</relationshipLabel>
    <relationshipName>Bio_AMVs</relationshipName>
    <type>Lookup</type>
</CustomField>