force-app/main/default/objects/Bio_AMVs__c/fields/Prompt_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Valid_From__c</fullName>
    <description>Today</description>
    <label>Prompt Valid From</label>
    <type>Date</type>
</CustomField>