force-app/main/default/objects/Bio_AMVs__c/fields/Prompt_valid_To__c.field-meta.xml
<CustomField>
    <fullName>Prompt_valid_To__c</fullName>
    <description>Last day of M+1</description>
    <label>Prompt valid To</label>
    <type>Date</type>
</CustomField>