force-app/main/default/objects/Bio_AMVs__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <label>Sales Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AT01</fullName>
            </value>
            <value>
                <fullName>DE01</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>