force-app/main/default/objects/Bio_AMVs__c/fields/ULG_98_m_Future__c.field-meta.xml
<CustomField>
    <fullName>ULG_98_m_Future__c</fullName>
    <label>ULG 98 (€/m³) Future</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>