force-app/main/default/objects/Bio_AMVs__c/listViews/FUTURE.listView-meta.xml
<ListView>
    <fullName>FUTURE</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Plant__c</columns>
    <columns>Frequency__c</columns>
    <columns>Future_Valid_From__c</columns>
    <columns>Future_Valid_To__c</columns>
    <columns>AGO_B7_m_Future__c</columns>
    <columns>ULG_95_E5_m_Future__c</columns>
    <columns>ULG_95_E10_m_Future__c</columns>
    <columns>ULG_98_m_Future__c</columns>
    <columns>ULG_95_E10_m_Prompt__c</columns>
    <columns>ULG_95_E5_m_Prompt__c</columns>
    <columns>ULG_98_m_Prompt__c</columns>
    <columns>AGO_B7_m_Prompt__c</columns>
    <columns>Override_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>FUTURE</label>
</ListView>