force-app/main/default/objects/Bio_AMVs__c/listViews/MANAGE.listView-meta.xml
<ListView>
    <fullName>MANAGE</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>Plant__c</columns>
    <columns>AGO_B7_m_Prompt__c</columns>
    <columns>AGO_B7_m_Future__c</columns>
    <columns>ULG_95_E5_m_Prompt__c</columns>
    <columns>ULG_95_E5_m_Future__c</columns>
    <columns>ULG_95_E10_m_Prompt__c</columns>
    <columns>ULG_95_E10_m_Future__c</columns>
    <columns>ULG_98_m_Prompt__c</columns>
    <columns>ULG_98_m_Future__c</columns>
    <filterScope>Everything</filterScope>
    <label>MANAGE</label>
</ListView>