force-app/main/default/objects/Bio_AMVs__c/listViews/PROMPT.listView-meta.xml
<ListView>
    <fullName>PROMPT</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>AGO_B7_m_Prompt__c</columns>
    <columns>ULG_95_E5_m_Prompt__c</columns>
    <columns>ULG_95_E10_m_Prompt__c</columns>
    <columns>ULG_98_m_Prompt__c</columns>
    <columns>AGO_B7_m_Future__c</columns>
    <columns>Prompt_Valid_From__c</columns>
    <columns>Prompt_valid_To__c</columns>
    <columns>Override_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>PROMPT(M+1)</label>
</ListView>